# obs-plugintemplate

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  DownloadDependencies.cmake  README.md  buildspec.json
.github/actions/setup-macos-codesigning/: action.yaml
.github/actions/setup-macos-signing/: action.yaml
.github/actions/setup-macos-signing-certs/: action.yaml  action.yml
.github/workflows/: build-project.yaml  deploy-project.yaml  lint-cmake.yaml  lint-src.yaml
build-aux/: run-clang-format  run-gersemi
cmake/common/: init.cmake
cmake/linux/: defaults.cmake  helpers.cmake
cmake/macos/: compilerconfig.cmake  helpers.cmake  xcode.cmake
cmake/windows/: helpers.cmake
release/plugintemplate-for-obs.plugin/Contents/: Info.plist
release/plugintemplate-for-obs.plugin/Contents/MacOS/: plugintemplate-for-obs
release/plugintemplate-for-obs.plugin/Contents/_CodeSignature/: CodeResources
scripts/: DownloadDependencies.cmake  build-obs-studio-macos.sh  download-deps.cmake  setup-deps.bash
src/: plugin-support.h
